--- a/HangMan/Hangman-frontend/styles/main.scss
+++ b/HangMan/Hangman-frontend/styles/main.scss
@@ -11,7 +11,9 @@
 
 * {
   font-family: "Mochiy Pop P One", sans-serif;
+  text-decoration: none;
 }
+
 .hangman-header {
   font-size: 50px;
   height: 70px;
