--- a/HangMan/Hangman-frontend/styles/components/lives.scss
+++ b/HangMan/Hangman-frontend/styles/components/lives.scss
@@ -1,8 +1,8 @@
 .lives {
-  position: absolute;
-  bottom: 10%;
-  right: 0;
+  position: relative;
+  // bottom: 10%;
+  // left: 100px;
   color: $dark-color;
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-family: "Mochiy Pop P One", sans-serif;
 }
