--- a/HangMan/Hangman-frontend/styles/layouts/container.scss
+++ b/HangMan/Hangman-frontend/styles/layouts/container.scss
@@ -1,19 +1,20 @@
 .game-wrapper {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background: $dark-color;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
 .left-pane {
-  width: 30%;
-  height: 100vh;
+  width: 100%;
+  height: 70vh;
   background: $pink-light;
   display: flex;
-  align-items: flex-end;
-  margin-right: auto;
+  justify-content: center;
+  // margin-right: auto;
 }
 
 .right-pane {
