--- a/HangMan/Hangman-frontend/styles/layouts/result.scss
+++ b/HangMan/Hangman-frontend/styles/layouts/result.scss
@@ -2,18 +2,19 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
 }
 
 .result-pane {
-  position: fixed;
+  position: relative;
+  bottom: 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 300px;
   &__header {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
 
@@ -33,6 +34,7 @@
 .res-btn {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
   background-image: linear-gradient(45deg, $dark-color 50%, $pink-dark 50%);
   background-size: 270%;
   background-repeat: repeat;
