--- a/HangMan/Hangman-frontend/styles/main.scss
+++ b/HangMan/Hangman-frontend/styles/main.scss
@@ -6,7 +6,6 @@
 @import "components/word.scss";
 @import "components/lives.scss";
 @import "layouts/result.scss";
-@import "components/replay_btn.scss";
 @import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap");
 
 * {
@@ -18,7 +17,7 @@
   font-size: 50px;
   height: 70px;
   font-family: "Mochiy Pop P One", sans-serif;
-  position: fixed;
+  position: absolute;
   left: 50%;
   margin-top: 10px;
   transform: translateX(-50%);
@@ -87,4 +86,93 @@
 
 .danger {
   color: $danger;
+}
+
+@media (min-width: 500px) {
+  .game-wrapper {
+    height: 100vh;
+    width: 100vw;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .start-container {
+    top: 0;
+    transform: none;
+  }
+  .start-inputs {
+    width: 100%;
+    flex-direction: row;
+    &__select {
+      margin-top: 0;
+    }
+  }
+  .left-pane {
+    margin-right: auto;
+    width: 30%;
+    height: 100vh;
+    align-items: flex-end;
+  }
+
+  .hangman-container {
+    height: 750px;
+    top: 0;
+    right: 0;
+  }
+  .start-button {
+    font-size: 2rem;
+  }
+  .lives {
+    font-size: 3rem;
+    position: absolute;
+    bottom: 10%;
+    right: 0;
+    left: auto;
+  }
+  .pole {
+    height: 700px;
+    &::after {
+      height: 5.5rem;
+    }
+  }
+  .word {
+    font-size: 5rem;
+  }
+
+  .hangman__element {
+    &:nth-child(2) {
+      height: 300px;
+    }
+    &:nth-child(3) {
+      top: 150px;
+    }
+    &:nth-child(4) {
+      top: 150px;
+    }
+    &:nth-child(5) {
+      top: 400px;
+    }
+    &:nth-child(6) {
+      top: 400px;
+    }
+  }
+  .hangman-6 {
+    top: 0px;
+  }
+  .hangman-7 {
+    top: 125px;
+  }
+  .result-wrapper {
+    flex-direction: row;
+    justify-content: center;
+    height: 100vh;
+  }
+  .result-pane {
+    margin-right: auto;
+    height: 300px;
+    bottom: 0;
+    &__header {
+      font-size: 3rem;
+    }
+  }
 }
