changed in result

--- a/HangMan/Hangman-frontend/styles/layouts/result.scss
+++ b/HangMan/Hangman-frontend/styles/layouts/result.scss
@@ -24,6 +24,7 @@
   background-size: 270%;
   background-repeat: repeat;
   background-position: top right;
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
